Alteração no nome do app e inserção da regra CAMACHO

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "love-calculator",
+  "name": "Calculadora do Amor",
   "app_id": "82936fc3",
   "type": "ionic-angular",
   "integrations": {
